Thu Aug 12 00:19:53 2010  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_rubyoptions.rb (test_script_from_stdin): disable
	  echo.  [ruby-dev:41966]

Wed Aug 11 23:28:22 2010  Kenta Murata  <mrkn@mrkn.jp>

	* lib/cmath.rb (CMath.sqrt): use floating-point value.
	  [ruby-core:31672] [Bug #3678]

	* test/test_cmath.rb: added for testing lib/cmath.rb.

Wed Aug 11 20:57:25 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* NEWS: merge from branches/ruby_1_9_2, and move io/console.
	  [ruby-dev:41924]

Wed Aug 11 11:01:15 2010  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c: don't use // comment.

Wed Aug 11 06:18:20 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_stat): Pathname#stat translated
	  from pathname.rb.

Tue Aug 10 21:18:04 2010  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c (nucomp_to_[ifr]): don't allow complex with in-exact
	  imaginary zero to be converted.

Tue Aug 10 20:56:31 2010  Tanaka Akira  <akr@fsij.org>

	* lib/optparse.rb: suppress a warning.

	* test/test_mutex_m.rb: ditto.

Tue Aug 10 20:56:13 2010  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date/format.rb (Date::Format::Bag): use Struct.
	  as an experimental.

Tue Aug 10 20:45:35 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_rename): Pathname#rename translated
	  from pathname.rb.

Tue Aug 10 20:16:19 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/dl/win32/lib/win32/resolv.rb (get_info): get rid of a warning.

Tue Aug 10 19:56:13 2010  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date/format.rb: [ruby-core:31658]

Tue Aug 10 17:24:56 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* README.EXT.ja: rb_tainted_str_new_cstr() is an alias of
	  rb_tainted_str_new2().

Tue Aug 10 15:24:30 2010  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c, ext/bigdecimal/bigdecimal.h,
	  ext/bigdecimal/extconf.rb: BASE and BASE_FIG are defined
	  based on the size of BDIGIT.
