@@ -1,3 +1,10 @@
+Thu Aug 12 05:58:09 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* include/ruby/encoding.h (rb_char_to_option_kcode): used in
+	  ripper.
+
+	* node.h (rb_reserved_word): ditto.
+
 Thu Aug 12 00:19:53 2010  Tanaka Akira  <akr@fsij.org>
 
 	* test/ruby/test_rubyoptions.rb (test_script_from_stdin): disable
